--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,7 @@ body {
 
 .btn--gray {
     margin-top: 25px;
-    background-color: #445361;
+    background-color: #747f88;
     border: 1px transparent;
     border-radius: 20px;
 }
